--- a/locales/nl.json
+++ b/locales/nl.json
@@ -2,12 +2,12 @@
 	"pair": {
 		"start": {
 			"intro": "Vul de gegevens van uw Synology NAS in.",
-			"title": "Apparaat zoeken...",
+			"title": "Apparaat toevoegen...",
 			"error": "Er is een fout opgetreden.",
 			"required": "Alle velden zijn verplicht.",
-			"hostname": "Host name",
-			"username": "Username",
-			"password": "Password",
+			"hostname": "IP-adres",
+			"username": "Gebruikersnaam",
+			"password": "Wachtwoord",
 			"saveSettings": "Gegevens opslaan",
 			"note": "Zorg ervoor dat de genoemde gebruikersnaam geen 2 factor authenticatie vereist!"
 		}
