working on creating the mail function

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,7 @@
 	  	"username": "Mail username",
 	  	"password": "Mail password",
 	  	"hostname": "SMTP server",
-	  	"port": "SMTP port"
+	  	"port": "SMTP port",
+	  	"sender": "Sender address"
   	}
 }
