--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,8 @@
 	  	"password": "Mail password",
 	  	"hostname": "SMTP server",
 	  	"port": "SMTP port",
-	  	"sender": "Sender address"
+	  	"sender": "Sender address",
+	  	"testSettings": "Test settings",
+	  	"gmailexplanation": "If you wish to send through Gmail SMTP servers, you first need to allow less secure apps on Gmail via <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a>"
   	}
 }
