--- a/locales/nl.json
+++ b/locales/nl.json
@@ -21,7 +21,8 @@
 	  	"password": "Mail wachtwoord",
 	  	"hostname": "SMTP server",
 	  	"port": "SMTP poort",
-	  	"sender": "Adres afzender"
-	  	
+	  	"sender": "Adres afzender",
+	  	"testSettings": "Test instellingen",
+	  	"gmailexplanation": "Als u gebruik wenst te maken van de SMTP servers van Gmail, moeten eerst 'minder veilige apps' toegang krijgen tot uw GMail account. Ga naar <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a> om dit in te schakelen."
   	}
 }
