--- a/locales/en.json
+++ b/locales/en.json
@@ -22,7 +22,9 @@
 	  	"hostname": "SMTP server",
 	  	"port": "SMTP port",
 	  	"sender": "Sender address",
-	  	"testSettings": "Test settings",
-	  	"gmailexplanation": "If you wish to send through Gmail SMTP servers, you first need to allow less secure apps on Gmail via <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a>"
+	  	"testmailSettings": "Test mail settings",
+	  	"gmailexplanation": "If you wish to send through Gmail SMTP servers, you first need to allow less secure apps on Gmail via <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a>",
+	  	"polling": "Polling",
+	  	"enablepolling": "Enable polling device status for triggers"
   	}
 }
