--- a/locales/nl.json
+++ b/locales/nl.json
@@ -22,7 +22,9 @@
 	  	"hostname": "SMTP server",
 	  	"port": "SMTP poort",
 	  	"sender": "Adres afzender",
-	  	"testSettings": "Test instellingen",
-	  	"gmailexplanation": "Als u gebruik wenst te maken van de SMTP servers van Gmail, moeten eerst 'minder veilige apps' toegang krijgen tot uw GMail account. Ga naar <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a> om dit in te schakelen."
+	  	"testmailSettings": "Test mailinstellingen",
+	  	"gmailexplanation": "Als u gebruik wenst te maken van de SMTP servers van Gmail, moeten eerst 'minder veilige apps' toegang krijgen tot uw GMail account. Ga naar <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a> om dit in te schakelen.",
+	  	"polling": "Statuschecks",
+	  	"enablepolling": "Schakel statuschecks in om acties in Homey te kunnen koppelen aan acties van buitenaf"
   	}
 }
