--- a/locales/en.json
+++ b/locales/en.json
@@ -26,5 +26,6 @@
 	  	"gmailexplanation": "If you wish to send through Gmail SMTP servers, you first need to allow less secure apps on Gmail via <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a>",
 	  	"polling": "Polling",
 	  	"enablepolling": "Enable polling device status for triggers"
-  	}
+  	},
+  	"not_all_vars_set": "Not all required variables for mailing have been set"
 }
