--- a/locales/en.json
+++ b/locales/en.json
@@ -25,7 +25,8 @@
 	  	"testmailSettings": "Test mail settings",
 	  	"gmailexplanation": "If you wish to send through Gmail SMTP servers, you first need to allow less secure apps on Gmail via <a href='https://www.google.com/settings/security/lesssecureapps' target='_blank'>https://www.google.com/settings/security/lesssecureapps</a>",
 	  	"polling": "Polling",
-	  	"enablepolling": "Enable polling device status for triggers"
+	  	"enablepolling": "Enable polling device status for triggers",
+	  	"encrypted_connection": "Use encrypted connection"
   	},
   	"not_all_vars_set": "Not all required variables for mailing have been set",
   	"snapshot_from": "Snapshot from camera"
